--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "os": "^0.1.2"
   }
 }
