--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
   "name": "dxcord",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Personal bot for the DXUNITY server.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "start": "npx ts-node src/index.ts",
+    "build": "tsc --project ./"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.8.1",
-    "dotenv": "^16.0.1",
-    "fs": "^0.0.1-security",
-    "mongoose": "^6.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "discord-linked-roles": "^0.2.1",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.3.0",
+    "node-fetch": "^3.3.1",
     "os": "^0.1.2"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.3.1",
+    "@types/node-fetch": "^2.6.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
